--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,15 @@ a {
     color: inherit;
     text-decoration: none;
 }
+.icon {
+    /* border: 1px solid red; */
+    width: 40%; 
+    height: 40%;
+    vertical-align: -0
+    .15em;
+    fill: currentColor;
+    overflow: hidden;
+ }
 .globalHeader{
     /* border: 1px solid red; */
     margin: 20px;
@@ -34,4 +43,40 @@ a {
     border-radius: 4px;
     color: white;
     font-size: 18px;
+}
+.site > ul {
+    /* border: 1px solid green; */
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin: 20px;
+}
+.site li{
+    border: 1px solid red;
+    border-radius: 4px;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    direction: column;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.logo {
+    /* border: 1px solid blue; */
+    background: rgb(241, 243, 244);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
