--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,13 @@ form{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    position: relative;
+}
+.close{
+    /* border: 1px solid red; */
+    top: 0px;
+    right: 0px;
+    position: absolute;
 }
 a{
     display: flex;
@@ -88,6 +95,71 @@ a{
 img {
     max-width: 100%;
     max-height: 100%;
+}
+.container{
+    /* border: 1px solid red; */
+    /* 写100vw会有左右滚动条 */
+    width: 99vw;
+    height: 100vh;
+    background: rgba(255,255,255,0.5);
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.container.show{
+    display: flex;
+}
+.frame{
+    /* border: 1px solid red; */
+    border-radius: 6px;
+    position: absolute;
+    width: 350px;
+    height: 250px;
+    box-shadow: 0px 4px 5px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 15px;
+    background: white;
+}
+.button{
+    display: flex;
+    justify-content: space-between;
+}
+.modify{
+    border: 1px solid rgb(209, 209, 209);
+    border-radius: 4px;
+    font-size: 15px;
+    color: rgba(125,125,125);
+    padding: 5px 10px;
+    background: inherit;
+}
+.second:hover{
+    cursor: pointer;
+}
+.button :nth-child(2){
+    /* border: 1px solid red; */
+    align-self: flex-end;
+    color: #1a73e8;
+}
+.modify.last.blue{
+    background: #297be7;
+    color: white;
+}
+.url-input{
+    border: 1px solid #f1f3f4;
+    width: 100%;
+    height: 30px;
+    background: #f1f3f4;
+    padding: 0px 10px;
+    border-radius: 4px;
+}
+.url-input:focus{
+    border: 1px solid rgba(47, 47, 248, 0.5);
+    box-shadow: 0px 0px 1px 1px rgba(7, 7, 199, 0.5);
 }
 @media(min-width:500px){
     body{
