--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@ form{
     border: 1px solid #9C9C9C;
     border-radius: 24px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    outline: none;
 }
 .serch{
     white-space: nowrap;
@@ -52,6 +53,7 @@ form{
     color: white;
     font-size: 18px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    outline: none;
 }
 .serch:hover{
     cursor: pointer;
@@ -189,16 +191,31 @@ img {
         width: 800px;
         margin-left: auto;
         margin-right: auto;
+        background: url(../image/鲸鱼动漫天空蓝色背景.jpg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+    .globalHeader{
+        /* border: 1px solid red; */
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     form{
         display: flex;
         justify-content: center;
+        /* border: 1px solid red; */
+        width: 100%;
+    }
+    .input-url{
+        background: rgba(255,255,255,0.7);
     }
     .site li{
         background: unset;
     }
     .site li:hover{
-        background: rgb(242, 242, 242);
+        background: rgba(242, 242, 242,0.5);
         cursor: pointer;
     }
     .icon-xiugai {
